--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mysql2": "^3.15.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Gusttavo09/Gerenciador-de-desempenho-academico.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Gusttavo09/Gerenciador-de-desempenho-academico/issues"
+  },
+  "homepage": "https://github.com/Gusttavo09/Gerenciador-de-desempenho-academico#readme"
 }
